# openpacketcore-sdk

./: .gitignore  .gitleaksignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  MAINTAINERS.md  Makefile  NOTICE  README.md  SECURITY.md  book.toml  deny.toml
crates/opc-alarm/: Cargo.toml  README.md
crates/opc-alarm-k8s/: Cargo.toml  README.md
crates/opc-alarm-k8s/src/: lib.rs
crates/opc-alarm-testkit/: Cargo.toml  README.md
crates/opc-alarm-testkit/src/: lib.rs
crates/opc-alarm-testkit/tests/: testkit_tests.rs
crates/opc-alarm-yang/: Cargo.toml  README.md
crates/opc-alarm-yang/src/: lib.rs
crates/opc-alarm/src/: lib.rs  model.rs  nacm_adapter.rs  persist_adapter.rs  sink.rs
crates/opc-alarm/tests/: adapters.rs  taxonomy_and_sink.rs
crates/opc-amf-lite/: Cargo.toml  README.md
crates/opc-amf-lite-testkit/: Cargo.toml  README.md
crates/opc-amf-lite-testkit/src/: lib.rs
crates/opc-amf-lite/src/: lib.rs
crates/opc-amf-lite/tests/: amf_lite_tests.rs  config_consensus_encryption.rs  config_consensus_restart_lifecycle.rs  config_session_consensus_isolation.rs  persist_datastore_metadata.rs
crates/opc-api-nnrf/: CONFORMANCE.md  Cargo.toml  README.md
crates/opc-api-nnrf/src/: lib.rs  serde_3gpp.rs  types.rs
crates/opc-api-nnrf/tests/: compat_sbi.rs
crates/opc-config-bus/: Cargo.toml  README.md
crates/opc-config-bus-consensus/: Cargo.toml  README.md
crates/opc-config-bus-consensus/src/: lib.rs  remote_watch.rs
crates/opc-config-bus-consensus/tests/: adapter.rs
crates/opc-config-bus/src/: alarms.rs  authority.rs  authorizer.rs  commit.rs  committed.rs  datastore.rs  lib.rs  metrics.rs  restore.rs  rollback.rs  subscribers.rs  types.rs
crates/opc-config-bus/tests/: config_bus_authorization.rs  config_bus_commit_admission.rs  config_bus_commit_persistence.rs  config_bus_committed_watch.rs  config_bus_confirmed_commit.rs  config_bus_idempotency.rs  config_bus_in_memory_datastore.rs  config_bus_recovery_fence.rs  config_bus_restore.rs  config_bus_rollback.rs  config_bus_subscribers.rs  encryption.rs  security_defaults_verification.rs
crates/opc-config-fixture/: Cargo.toml  README.md
crates/opc-config-fixture/src/: lib.rs
crates/opc-config-fixture/tests/: config_fixture_commit.rs
crates/opc-config-model/: Cargo.toml  README.md
crates/opc-config-model/src/: apply_plan.rs  lib.rs
crates/opc-config-model/tests/: model_contract.rs
crates/opc-consensus/: Cargo.toml  README.md
crates/opc-consensus/src/: codec.rs  identity.rs  lib.rs  linearizability.rs  profile.rs  transport.rs
crates/opc-crypto/: Cargo.toml  README.md
crates/opc-crypto-provider/: Cargo.toml  README.md
crates/opc-crypto-provider/src/: capability.rs  identity.rs  lib.rs  ops.rs  policy.rs  provider.rs  report.rs  selftest.rs  testkit.rs
crates/opc-crypto-provider/tests/: fail_closed.rs
crates/opc-crypto/src/: lib.rs
crates/opc-data-governance/: Cargo.toml  README.md
crates/opc-data-governance/src/: class.rs  lib.rs  retention.rs
crates/opc-dataplane-testkit/: Cargo.toml  README.md
crates/opc-dataplane-testkit/schemas/: packet-continuity-report.schema.json
crates/opc-dataplane-testkit/src/: error.rs  evidence.rs  gtpu.rs  lib.rs  measurement.rs  reflector.rs  traffic.rs
crates/opc-dataplane-testkit/tests/: continuity.rs
crates/opc-diameter-transport/: Cargo.toml  README.md
crates/opc-diameter-transport/src/: dtls.rs  election.rs  frame.rs  frame_transport.rs  inband.rs  lib.rs  runtime.rs  tls.rs
crates/opc-diameter-transport/tests/: dtls_sctp.rs  tls_tcp.rs
crates/opc-evidence/: Cargo.toml  README.md
crates/opc-evidence/src/: bundle.rs  data_governance.rs  dataplane.rs  error.rs  evidence.rs  extract.rs  gap.rs  lib.rs  manifest.rs  packet_core.rs  performance.rs  policy.rs  provenance.rs  requirement.rs  sbom.rs  status.rs  tag.rs  vex.rs
crates/opc-evidence/tests/: dataplane_snapshot.rs  evidence_bundle.rs  evidence_extract.rs  evidence_fixture_format.rs  evidence_gap.rs  evidence_gap_gate.rs  evidence_manifest.rs  evidence_packet_core.rs  evidence_performance.rs  evidence_policy.rs  evidence_provenance.rs  evidence_requirements.rs  evidence_sbom_vex.rs  evidence_schema.rs  evidence_status.rs
crates/opc-export/: Cargo.toml  README.md
crates/opc-export/src/: lib.rs
crates/opc-gnmi-server/: Cargo.toml  README.md  build.rs
crates/opc-gnmi-server/proto/: README.md
crates/opc-gnmi-server/src/: arbitration.rs  audit.rs  binding.rs  capabilities.rs  committed_revision.rs  confirmed_commit.rs  encoding.rs  error.rs  extension.rs  get.rs  lib.rs  listener.rs  metrics.rs  path.rs  proto.rs  proto_adapter.rs  service.rs  set.rs  smoke.rs  subscribe.rs  supervision.rs  transport.rs  value.rs
crates/opc-gnmi-server/tests/: gnmic_interop_script.rs
crates/opc-gtpu-dataplane/: Cargo.toml  README.md
crates/opc-gtpu-dataplane-ebpf/: Cargo.toml  README.md
crates/opc-gtpu-dataplane-ebpf/.cargo/: config.toml
crates/opc-gtpu-dataplane-ebpf/src/: main.rs
crates/opc-gtpu-dataplane/src/: backend.rs  ebpf.rs  error.rs  icmp.rs  lib.rs  linux.rs  mock.rs  model.rs  reassembly.rs  unsupported.rs
crates/opc-gtpu-dataplane/tests/: ebpf_gtpu_privileged.rs  linux_gtpu_privileged.rs  reconciliation_public_api.rs
crates/opc-gtpu-ebpf-common/: Cargo.toml  README.md
crates/opc-gtpu-ebpf-common/src/: envelope.rs  fragment.rs  lib.rs  pmtu.rs  session.rs
crates/opc-identity/: Cargo.toml  README.md
crates/opc-identity/src/: file_svid.rs  lib.rs  projected_svid.rs
crates/opc-ipsec-lb/: Cargo.toml  README.md
crates/opc-ipsec-lb-ebpf/: Cargo.toml  README.md
crates/opc-ipsec-lb-ebpf-common/: Cargo.toml  README.md
crates/opc-ipsec-lb-ebpf-common/src/: lib.rs  xdp.rs
crates/opc-ipsec-lb-ebpf/src/: main.rs
crates/opc-ipsec-lb/src/: bgp.rs  classifier.rs  cookie.rs  error.rs  external_lb.rs  failover.rs  lib.rs  mock.rs  model.rs  offload.rs  ownership.rs  ports.rs  redirect.rs  repin.rs  selector.rs  session.rs  spi.rs  (+4 more)
crates/opc-ipsec-xfrm-ebpf/: Cargo.toml
crates/opc-ipsec-xfrm-ebpf-common/: Cargo.toml
(+1292 files in other folders)
