[workspace]
members = [
    "crates/*",
    "crates/opc-proto-gtpu",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
authors = ["OpenPacketCore Contributors"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/openpacketcore/openpacketcore-sdk"
rust-version = "1.88"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
tracing = "0.1"
bytes = "1.8"
uuid = { version = "1.11", features = ["v4", "serde"] }
time = "0.3"
async-trait = "0.1"
serde_json = "1.0"
num_cpus = "1.16"
sha2 = "0.11"
rand = "0.8"
aes-gcm-siv = "0.11"
hkdf = "0.12"
subtle = "2.6"
zeroize = "1.8"
hmac = "0.12"
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls-pki-types = { version = "1.8", features = ["std"] }
x509-parser = { version = "0.16" }
rcgen = { version = "0.13" }

[workspace.lints.rust]
unsafe_code = "forbid"
