[workspace]
members = [
    "crates/*",
    "crates/opc-proto-gtpu",
]
# The eBPF datapath crates build for bpfel-unknown-none with -Z build-std and
# their own pinned nightly toolchain; they cannot share the host workspace
# build graph. See scripts/build-gtpu-ebpf.sh and scripts/build-ipsec-lb-ebpf.sh.
exclude = [
    "crates/opc-gtpu-dataplane-ebpf",
    "crates/opc-ipsec-lb-ebpf",
    "crates/opc-ipsec-xfrm-ebpf",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
authors = ["OpenPacketCore Contributors"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/openpacketcore/openpacketcore-sdk"
rust-version = "1.88"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
tracing = "0.1"
bytes = "1.8"
uuid = { version = "1.11", features = ["v4", "serde"] }
time = "0.3"
async-trait = "0.1"
serde_json = "1.0"
num_cpus = "1.16"
# sha2/hkdf/hmac are coupled through digest/crypto-common 0.10 and must move
# to the 0.11 trait line together with aes-gcm-siv, which has no stable
# release on the new traits yet; partial bumps create duplicate digest versions.
sha2 = "0.10"
# IKEv2 PRF and integrity state is key-derived and must be wiped on drop. Keep
# this explicit alias on the RustCrypto digest 0.11 line with zeroization until
# the remaining workspace crypto stack can move as one compatibility change.
sha2-zeroize = { package = "sha2", version = "0.11", features = ["zeroize"] }
sha1 = "0.11"
rand = "0.10"
aes = { version = "0.9.1", features = ["zeroize"] }
aes-gcm = { version = "0.11.0-rc.4", default-features = false, features = ["aes", "alloc", "zeroize"] }
aes-gcm-siv = "0.11"
cbc = { version = "0.2.1", default-features = false, features = ["block-padding", "zeroize"] }
hkdf = "0.12"
subtle = "2.6"
zeroize = "1.8"
hmac = "0.12"
rsa = { version = "0.9", default-features = false, features = ["std", "sha2"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls-pki-types = { version = "1.8", features = ["std"] }
x509-parser = { version = "0.16" }
rcgen = { version = "0.13" }
nix = { version = "0.31.3", default-features = false }
openraft = { version = "=0.9.24", git = "https://github.com/openpacketcore/openraft", rev = "f607e636406b16bd0ad7925dbb631da1b7a4cd96", features = ["serde", "storage-v2", "single-term-leader"] }
postcard = { version = "=1.1.3", default-features = false, features = ["alloc", "use-std"] }

[workspace.lints.rust]
unsafe_code = "forbid"
