[package]
name = "opc-alarm-k8s"
version = "0.1.0"
edition = "2021"
description = "Kubernetes condition and event mappings for OpenPacketCore alarms (RFC 013)"

[dependencies]
opc-alarm = { path = "../opc-alarm" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
time = { workspace = true, features = ["formatting"] }
