[package]
name = "opc-alarm-testkit"
version = "0.2.0"
publish = false
edition = "2021"
description = "Deterministic testing and assertions testkit for OpenPacketCore alarms (RFC 013)"

[dependencies]
opc-alarm = { path = "../opc-alarm" }
tokio = { workspace = true, features = ["sync", "time", "rt", "test-util"] }
time = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
