[package]
name = "opc-alarm-yang"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "YANG schema and operational projections for OpenPacketCore alarms"


readme = "README.md"
documentation = "https://docs.rs/opc-alarm-yang"
keywords = ["5g", "cnf", "alarm", "yang", "telecom"]
categories = ["network-programming", "encoding"]
[dependencies]
opc-alarm = { path = "../opc-alarm", version = "0.1.0" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
time = { workspace = true, features = ["formatting"] }