[package]
name = "opc-alarm"
version.workspace = true
publish = false # normal reverse dependency of source-build-only opc-persist
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "OpenPacketCore alarm model, severity taxonomy, dedup/update/clear manager, and in-memory store"


readme = "README.md"
documentation = "https://docs.rs/opc-alarm"
keywords = ["5g", "cnf", "alarm", "telecom", "packet-core"]
categories = ["network-programming"]
[features]
default = []
nacm = ["dep:opc-nacm"]
persist = ["dep:opc-persist"]
persist-test-hooks = ["persist", "opc-persist/dangerous-test-hooks"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
time = { workspace = true, features = ["serde"] }
uuid = { workspace = true }
sha2 = { workspace = true }
opc-nacm = { path = "../opc-nacm", version = "0.2.0", optional = true }
opc-persist = { path = "../opc-persist", version = "0.2.0", optional = true }
opc-redaction = { path = "../opc-redaction", version = "0.2.0" }
tokio = { workspace = true, features = ["rt", "sync", "time", "macros"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "test-util"] }

[lints]
workspace = true
