[package]
name = "opc-api-nnrf"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Generated Rust types for 3GPP TS 29.510 Nnrf NFManagement / NFDiscovery (pilot)."

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
opc-types = { path = "../opc-types", version = "0.1.0" }

[dev-dependencies]
