[package]
name = "opc-api-nnrf"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Generated Rust types for 3GPP TS 29.510 Nnrf NFManagement / NFDiscovery (pilot)."
readme = "README.md"
documentation = "https://docs.rs/opc-api-nnrf"
keywords = ["5g", "nrf", "sbi", "openapi", "telecom"]
categories = ["network-programming", "api-bindings"]
publish = false # experimental: not published until graduation

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
opc-types = { path = "../opc-types", version = "0.1.0" }

[dev-dependencies]
opc-sbi = { path = "../opc-sbi", version = "0.1.0", features = ["testkit"] }
tokio = { workspace = true, features = ["macros", "rt"] }
