[package]
name = "opc-config-fixture"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
description = "Generated-like config fixture for OpenPacketCore integration testing"

[dependencies]
opc-config-model = { path = "../opc-config-model", version = "0.2.0" }
opc-types = { path = "../opc-types", version = "0.2.0" }

[dev-dependencies]
async-trait = { workspace = true }
opc-config-bus = { path = "../opc-config-bus", version = "0.2.0" }
opc-nacm = { path = "../opc-nacm", version = "0.2.0" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }

[lints]
workspace = true
