[package]
name = "opc-crypto-provider"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Fail-closed capability reporting and policy admission boundary for cryptographic modules"
readme = "README.md"
documentation = "https://docs.rs/opc-crypto-provider"
keywords = ["5g", "cnf", "cryptography", "telecom", "packet-core"]
categories = ["cryptography", "network-programming"]
publish = true

[features]
testkit = []

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[[test]]
name = "fail_closed"
required-features = ["testkit"]

[lints]
workspace = true
