[package]
name = "opc-crypto"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "AEAD envelope encoding, decoding, and provider-driven encryption for OpenPacketCore"


readme = "README.md"
documentation = "https://docs.rs/opc-crypto"
keywords = ["5g", "cnf", "cryptography", "telecom", "packet-core"]
categories = ["cryptography", "network-programming"]
[dependencies]
opc-key = { path = "../opc-key", version = "0.1.0" }
rand = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
opc-types = { path = "../opc-types", version = "0.1.0" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true