[package]
name = "opc-export"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Signed and classified export metadata contracts for OpenPacketCore"

[dependencies]
opc-data-governance = { path = "../opc-data-governance" }
opc-redaction = { path = "../opc-redaction" }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
