[package]
name = "opc-export"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Signed and classified export metadata contracts for OpenPacketCore"


readme = "README.md"
documentation = "https://docs.rs/opc-export"
keywords = ["5g", "cnf", "backup", "telecom", "packet-core"]
categories = ["network-programming"]
[dependencies]
opc-data-governance = { path = "../opc-data-governance", version = "0.2.0" }
opc-redaction = { path = "../opc-redaction", version = "0.2.0" }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true