[package]
name = "opc-gnmi-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Capability-honest gNMI server foundation for the OpenPacketCore management plane"
readme = "README.md"
documentation = "https://docs.rs/opc-gnmi-server"
keywords = ["5g", "cnf", "gnmi", "yang", "management"]
categories = ["network-programming"]

[dependencies]
opc-config-bus = { path = "../opc-config-bus", version = "0.2.0" }
opc-config-model = { path = "../opc-config-model", version = "0.2.0" }
opc-mgmt-audit = { path = "../opc-mgmt-audit", version = "0.2.0" }
opc-mgmt-authz = { path = "../opc-mgmt-authz", version = "0.2.0" }
opc-mgmt-errors = { path = "../opc-mgmt-errors", version = "0.2.0" }
opc-mgmt-limits = { path = "../opc-mgmt-limits", version = "0.2.0" }
opc-mgmt-opstate = { path = "../opc-mgmt-opstate", version = "0.2.0" }
opc-mgmt-path = { path = "../opc-mgmt-path", version = "0.2.0" }
opc-mgmt-principal = { path = "../opc-mgmt-principal", version = "0.2.0" }
opc-mgmt-schema = { path = "../opc-mgmt-schema", version = "0.2.0" }
opc-mgmt-transport = { path = "../opc-mgmt-transport", version = "0.2.0" }
opc-redaction = { path = "../opc-redaction", version = "0.2.0" }
opc-identity = { path = "../opc-identity", version = "0.2.0" }
opc-runtime = { path = "../opc-runtime", version = "0.2.0" }
prost = { version = "0.13.5", default-features = true }
prost-types = { version = "0.13.5", default-features = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "net", "rt", "sync", "time"] }
tokio-rustls = { workspace = true }
tonic = { version = "0.13.1", default-features = false, features = ["codegen", "prost", "router", "server"] }
tracing = { workspace = true }

[build-dependencies]
tonic-build = { version = "0.13.1", default-features = false, features = ["prost", "transport"] }

[dev-dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
http-body-util = "0.1"
hyper-util = { version = "0.1.20", features = ["client", "tokio"] }
opc-nacm = { path = "../opc-nacm", version = "0.2.0" }
opc-tls = { path = "../opc-tls", version = "0.2.0" }
opc-types = { path = "../opc-types", version = "0.2.0" }
rcgen = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt", "sync", "time"] }
tonic = { version = "0.13.1", default-features = false, features = ["channel"] }

[lints]
workspace = true
