[package]
name = "opc-gtpu-dataplane"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Safe Linux GTP-U dataplane backend model, mock backend, and redaction-safe errors for OpenPacketCore"
readme = "README.md"
documentation = "https://docs.rs/opc-gtpu-dataplane"
keywords = ["5g", "gtpu", "gtp", "linux", "packet-core"]
categories = ["network-programming", "os::linux-apis"]
publish = false

[dependencies]
opc-linux-gtpu-sys = { path = "../opc-linux-gtpu-sys", version = "0.2.0" }
opc-gtpu-ebpf-common = { path = "../opc-gtpu-ebpf-common", version = "0.2.0" }
opc-types = { path = "../opc-types", version = "0.2.0" }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "time"] }

[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = "0.14" }
aya-obj = { version = "0.3" }
sha1 = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[target.'cfg(target_os = "linux")'.dev-dependencies]
# setns() for the privileged multi-netns integration test.
nix = { workspace = true, features = ["net", "sched", "socket", "uio"] }
opc-ipsec-xfrm = { path = "../opc-ipsec-xfrm", version = "0.2.0" }

[lints]
workspace = true
